# ectorepo

./: .envrc.ecto.eg  .gitignore  .gitmodules  POLEMIC.org  README.org  UTIL.org  _clojure.org  _julia.org  _nvidia.org  _remotes.xml  _uber.org  manifest.scm  pyproject.toml
ansible/: README.org  default.xml
ansible-collections/: README.org  ac_core.xml  default.xml  lsr_core.xml
astral/: README.org  astral.xml  default.xml
autopsy/: README.org  default.xml  services.xml
bioinformatics/: README.org  default.xml  wikipathways.xml
clab/: README.org  default.xml  misc.xml  nokia.xml  siderolabs.xml  srllabs.xml
clojure/: README.org  clojars.txt  default.xml  manifest.scm
crypto/: README.org  default.xml  gnupg.xml  go.xml  python.xml  smallstep.xml  yubico.xml
dcim/: README.org  default.xml  nautobot.xml  netbox.xml  netreplica.xml
fcitx/: README.org  default.xml  fcitx.xml
ffmpeg/: README.org  default.xml  fcitx.xml
finance/: README.org  default.xml  openbb.xml
frc/: 2025.xml  README.org  bbFrc.xml  ctr.xml  ctre.xml  default.xml  frcmisc.xml  hardware.xml  lumyn.xml  photonvision.xml  robotpy.xml  teams.xml  wpilibsuite.xml
graphql/: Dockerfile.graphql-lsp  README.org  graphql-lsp.org
hacknet/: README.org  default.xml  ivre.xml  nfdump.xml  nmapetc.xml  orch.xml  scanners.xml  tobits.xml  (+2 more)
hashicorp/: .envrc.eg  README.org  default.xml  gcp_blueprints.xml  manifest.scm  pyproject.toml
hashicorp/scraping/: repos.xml
hashicorp/scraping/scraping/spiders/: gcp_tf_blueprints.py
scrapy/: .gitignore  README.org  poetry.toml  pyproject.toml
(+84 files in other folders)
