[tool.poetry]
name = "gitrepo"
version = "0.0.1"
description = "An environment for random automation on git repos"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
python-lsp-server = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
