[tool.poetry]
name = "repo-hashicorp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repo_hashicorp"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.9.0"
gql = {extras = ["all"], version = "^3.4.1"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
python-lsp-server = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
